09052025 - Added schema drift comparison between integration and prod in CI