@@ -11,7 +11,32 @@ env:
   DBT_PROFILES_DIR: ./profiles
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Prepare dbt for templating (deps only)
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install "dbt-core==1.10.8" "dbt-bigquery==1.10.1"
+          dbt deps
+      - name: Run pre-commit (lint only)
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --hook-stage manual --all-files --show-diff-on-failure
+        env:
+          # Ensure sqlfluff's dbt templater can resolve a profile without real credentials
+          DBT_TARGET: ci
+          DBT_PROFILES_DIR: ./profiles
+          DBT_GCP_PROJECT_CI: lint-ci
+          DBT_BQ_DATASET: lint_ci
+          DBT_BQ_LOCATION: US
+
   bigquery-ci:
+    needs: [lint]
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -19,7 +44,7 @@ jobs:
       pull-requests: write
       issues: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - id: auth
         uses: google-github-actions/auth@v2
@@ -35,7 +60,7 @@ jobs:
       - name: Python & dbt install
         run: |
           python -m pip install --upgrade pip
-          python -m pip install "dbt-core==1.10.1" "dbt-bigquery==1.10.1"
+          python -m pip install "dbt-core==1.10.8" "dbt-bigquery==1.10.1"
 
       - name: Set CI env
         run: |
